# Data_Science

./: Hw1.ipynb  Hw1.ipynb.ipynb  Hw10.ipynb  Hw11.ipynb  Hw12.ipynb  Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  Hw3.ipynb  Hw4.ipynb  Hw5.ipynb  Hw6.ipynb  Hw7.ipynb  Hw8.ipynb  Hw9.ipynb  pyproject.toml
