[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "data_science"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
lxml = "^5.2.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
scikit-surprise = "^1.1.4"
tensorflow-io-gcs-filesystem = "^0.31.0"
tensorflow = "^2.16.1"
keras-tuner = "^1.4.7"
spacy = "^3.7.5"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
